# pebbleos

./: .clang-format  .gdbinit  .gitignore  .gitlint  .gitmodules  .readthedocs.yaml  CONTRIBUTING.md  Doxyfile  Doxyfile-all-graphs  DoxygenLayout.xml  README.md  analyze.sh  crowdin.yml  ftdi.patch  ftdi_fix.sh  ftdi_reload.sh  ftdi_unload.sh  hard_flash.sh  pblogger  prompt.sh  qemu_run.sh  requirements-brew.txt  requirements-linux.txt  requirements-osx.txt  requirements.txt  wscript
python_libs/pbl/: README.md  pyproject.toml  setup.py
python_libs/pbl/pbl/: __init__.py
python_libs/pbl/pbl/commands/: coredump.py
python_libs/pblconvert/: .gitignore  README.rst  pblconvert-runner.py  pyproject.toml  setup.py
python_libs/pblconvert/pblconvert/: __main__.py  exceptions.py
python_libs/pblconvert/pblconvert/gif2apng/: colormap.txt  gif.py
python_libs/pblconvert/pblconvert/svg2pdc/: annotation.py  exceptions.py  pdc.py  svg.py
python_libs/pblconvert/tests/svg2pdc/: test_examples.py  test_svg2commands.py
python_libs/pblprog/: .gitignore  README.md  pyproject.toml  setup.py
python_libs/pblprog/loader/: wscript
python_libs/pblprog/loader/src/: main.c  stm32f4_loader.ld
python_libs/pblprog/loader/waftools/: objcopy.py
python_libs/pblprog/pebble/: __init__.py
python_libs/pblprog/pebble/programmer/: __init__.py  __main__.py  ftdi_swd.py  swd_port.py
python_libs/pblprog/pebble/programmer/targets/: __init__.py  stm32.py  stm32f4.py  stm32f7.py
python_libs/pebble-commander/: README.rst  pyproject.toml  setup.py
python_libs/pebble-commander/pebble/commander/: __init__.py  __main__.py  commander.py  exceptions.py  interactive.py  parsers.py
python_libs/pebble-commander/pebble/commander/_commands/: __init__.py  app.py  bluetooth.py  imaging.py  misc.py  pfs.py  windows.py
python_libs/pulse2/: .gitignore  README.rst  pyproject.toml  setup.py
python_libs/pulse2/pebble/pulse2/: __init__.py  exceptions.py  framing.py  link.py  logging.py  pcap_file.py  pcmp.py  ppp.py  stats.py  transports.py
python_libs/pulse2/tests/: fake_timer.py  test_framing.py  test_link.py  test_pcmp.py  test_ppp.py  test_transports.py  timer_helper.py
(+4285 files in other folders)
