[project]
name = "pebble.programmer"
version = "0.0.3"
description = "Pebble Programmer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"intelhex>=2.1,<3",
	"pyftdi",
]

[project.entry-points."pebble.programmer"]
targets = "loader.bin"

[project.scripts]
pblprog = "pebble.programmer.__main__:main"

[tool.setuptools]
packages = ["pebble"]
